--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
 
   <main>
-    <form action="ainda n tem kk" method="post">
+    <form action="serverPost.php" method="post">
       
       <label for="nome">Nome Completo:</label>
       <input type="text" id="nome" name="nome" required><br><br>
