[feat] Adicionado conexão com BD em server_post e validação

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
 
   <main>
-    <form action="serverPost.php" method="post">
+    <form action="server_post.php" method="post">
       
       <label for="nome">Nome Completo:</label>
       <input type="text" id="nome" name="nome" required><br><br>
